Opened 13 years ago

Closed 11 years ago

#2872 closed defect (fixed)

jpeg2000: wrong colors

Reported by: ami_stuff Owned by:
Priority: minor Component: avcodec
Version: git-master Keywords: j2k
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

decodes corectly with -vcodec libopenjpeg

http://www.datafilehost.com/d/79c4352a

C:\>ffmpeg -i lj2k_18_1.avi out.avi
ffmpeg version N-55393-g3b2e99f Copyright (c) 2000-2013 the FFmpeg developers
  built on Aug  8 2013 21:32:57 with gcc 4.7.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvo-aacenc --enable-libvo-
amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --
enable-libxvid --enable-zlib
  libavutil      52. 41.100 / 52. 41.100
  libavcodec     55. 24.100 / 55. 24.100
  libavformat    55. 13.102 / 55. 13.102
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 82.100 /  3. 82.100
  libswscale      2.  4.100 /  2.  4.100
  libswresample   0. 17.103 /  0. 17.103
  libpostproc    52.  3.100 / 52.  3.100
[avi @ 029d7900] non-interleaved AVI
Guessed Channel Layout for  Input Stream #0.0 : stereo
Input #0, avi, from 'lj2k_18_1.avi':
  Duration: 00:00:24.80, start: 0.000000, bitrate: 1032 kb/s
    Stream #0:0: Audio: adpcm_ima_wav ([17][0][0][0] / 0x0011), 44100 Hz, stereo
, s16p, 352 kb/s
    Stream #0:1: Video: jpeg2000 (JPEG 2000 codestream restriction 0) (LJ2K / 0x
4B324A4C), rgb24, 352x244, 5 tbr, 5 tbn, 5 tbc
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf55.13.102
    Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 352x244, q=2-31, 200
 kb/s, 5 tbn, 5 tbc
    Stream #0:1: Audio: mp3 (libmp3lame) (U[0][0][0] / 0x0055), 44100 Hz, stereo
, s16p
Stream mapping:
  Stream #0:1 -> #0:0 (jpeg2000 -> mpeg4)
  Stream #0:0 -> #0:1 (adpcm_ima_wav -> libmp3lame)
Press [q] to stop, [?] for help
frame=   89 fps=0.0 q=27.2 size=     887kB time=00:00:19.27 bitrate= 376.9kbits/
frame=  124 fps=0.0 q=27.3 Lsize=    1164kB time=00:00:24.80 bitrate= 384.6kbits
/s
video:742kB audio:387kB subtitle:0 global headers:0kB muxing overhead 3.095574%

Change History (5)

comment:1 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavcodec
Keywords: j2k added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Could this be related to ticket #1211?

comment:2 by thovo, 12 years ago

@ami_stuff: could you upload the example file again to a public server?

comment:4 by Carl Eugen Hoyos, 11 years ago

Priority: normalminor

Looks visually ok since 074159ed70acd379d94378b72a9202283e651ba0 - output is not bitexact yet.

comment:5 by Michael Niedermayer, 11 years ago

Resolution: fixed
Status: openclosed

Should be fixed in 44327cbc9a8c8f766e7e3f567b647b68c89d16bd
please reopen if there are remaining significant differences to how it should look

Note: See TracTickets for help on using tickets.