avcodec/jpeg2000: Disable special case for JPEG2000_QSTY_SI

The code gave apparently completely wrong values

Fixes Ticket2872

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>